  - why bother no media data has been written anyway
* EWF2 can handle more then UINT16_MAX segment files - add support for this?
  - having more than 65000 segment files is a bit overkill,
    also the naming schema does not support this without creating odd names
    for now not adding support for this, unless there is a good reason to do so

20141002
* removed README.macosx

20140801
* bug fix in Python-bindings

20140608
* worked on tests
* updated msvscpp files
* bug fix for utf16 header functions

20140602
* bug fix in ewfmount regarding logical files date and time values
* fix for Lx01 files, device information section needs to be read before the
  sector table section to determine the chunk size

20140601
* updated dependencies
* deprecated random functions
* worked on Python bindings
* worked on tests
* worked on EWF2 refactor

20140424
* fixes to build static library with mingw and cygwin

20140406
* bug fixes in m4 files
* worked on Python bindings

20140216
* bug fix in recent process status changes

20140201
* updated libcdatetime

20140126
* fixed multi file caching bug in libfdata

20140119
* 2014 update
* updated dependencies
* added libcdatetime
* bug fix in writing original ewf format, due to EWF2 refactor

20131230
* small updates

20131222
* moved low-level function support from compile time to run time
* worked on experimental features

20131211
* worked on Python bindings

20131210
* updated dependencies
* worked on Python bindings
* fix in DFXML output for size values
* removed codegear project files
* worked on ewfmount

20130901
* updated dependencies
* worked on Python bindings
* worked on tests

20130831
* updated dependencies
* replaced libcmulti by libcthreads

20130411
* changes for libmfdata and libfdata merge

20130410
* changes for libmfdata and libfdata merge

20130409
* changes for libmfdata and libfdata merge

20130408
* changes for libmfdata and libfdata merge

20130407
* changes for libmfdata and libfdata merge

20130406