@@ -1,12 +1,13 @@
 # Files to ignore by git
 #
-# Version: 20130922
+# Version: 20141004
 
 # Generic auto-generated build files
 *~
 *.a
 *.la
 *.lai
+*.lineno
 *.lo
 *.Plo
 *.Po
