@@ -1894,7 +1894,7 @@ int libewf_handle_open_file_io_pool(
 	     NULL,
 	     (int (*)(intptr_t *, intptr_t *, libfdata_list_element_t *, libfcache_cache_t *, int, off64_t, size64_t, uint32_t, uint8_t, libcerror_error_t **)) &libewf_chunk_data_read_element_data,
 	     NULL,
-	     LIBFDATA_FLAG_DATA_HANDLE_NON_MANAGED,
+	     LIBFDATA_DATA_HANDLE_FLAG_NON_MANAGED,
 	     error ) != 1 )
 	{
 		libcerror_error_set(
