@@ -151,7 +151,7 @@ int libewf_segment_file_initialize(
 	     NULL,
 	     (int (*)(intptr_t *, intptr_t *, libfdata_list_element_t *, libfcache_cache_t *, int, off64_t, size64_t, uint32_t, uint8_t, libcerror_error_t **)) &libewf_segment_file_read_section_element_data,
 	     NULL,
-	     LIBFDATA_FLAG_DATA_HANDLE_NON_MANAGED,
+	     LIBFDATA_DATA_HANDLE_FLAG_NON_MANAGED,
 	     error ) != 1 )
 	{
 		libcerror_error_set(
@@ -170,7 +170,7 @@ int libewf_segment_file_initialize(
 	     NULL,
 	     (int (*)(intptr_t *, intptr_t *, libfdata_list_element_t *, libfcache_cache_t *, int, off64_t, size64_t, uint32_t, uint8_t, libcerror_error_t **)) &libewf_segment_file_read_chunk_group_element_data,
 	     NULL,
-	     LIBFDATA_FLAG_DATA_HANDLE_NON_MANAGED,
+	     LIBFDATA_DATA_HANDLE_FLAG_NON_MANAGED,
 	     error ) != 1 )
 	{
 		libcerror_error_set(
@@ -7153,7 +7153,7 @@ int libewf_segment_file_read_chunk_group_element_data(
 	     NULL,
 	     (int (*)(intptr_t *, intptr_t *, libfdata_list_element_t *, libfcache_cache_t *, int, off64_t, size64_t, uint32_t, uint8_t, libcerror_error_t **)) &libewf_chunk_data_read_element_data,
 	     NULL,
-	     LIBFDATA_FLAG_DATA_HANDLE_NON_MANAGED,
+	     LIBFDATA_DATA_HANDLE_FLAG_NON_MANAGED,
 	     error ) != 1 )
 	{
 		libcerror_error_set(
