@@ -124,7 +124,7 @@ int libewf_segment_table_initialize(
 			  NULL,
 			  (int (*)(intptr_t *, intptr_t *, libfdata_list_element_t *, libfcache_cache_t *, int, off64_t, size64_t, uint32_t, uint8_t, libcerror_error_t **)) &libewf_segment_file_read_element_data,
 			  NULL,
-			  LIBFDATA_FLAG_DATA_HANDLE_NON_MANAGED,
+			  LIBFDATA_DATA_HANDLE_FLAG_NON_MANAGED,
 			  error );
 	}
 	else
@@ -137,7 +137,7 @@ int libewf_segment_table_initialize(
 			  NULL,
 		          (int (*)(intptr_t *, intptr_t *, libfdata_list_element_t *, libfcache_cache_t *, int, off64_t, size64_t, uint32_t, uint8_t, libcerror_error_t **)) &libewf_delta_segment_file_read_element_data,
 			  NULL,
-			  LIBFDATA_FLAG_DATA_HANDLE_NON_MANAGED,
+			  LIBFDATA_DATA_HANDLE_FLAG_NON_MANAGED,
 			  error );
 	}
 	if( result != 1 )
