@@ -1,7 +1,7 @@
 #!/bin/sh
 # Script that synchronizes the local library dependencies
 #
-# Version: 20141001
+# Version: 20141004
 
 GIT_URL_PREFIX="https://github.com/libyal";
 LOCAL_LIBS="libbfio libcaes libcdata libcdatetime libcerror libcfile libclocale libcnotify libcpath libcsplit libcstring libcsystem libcthreads libfcache libfdata libfvalue libhmac libodraw libsmdev libsmraw libuna";
@@ -26,8 +26,8 @@ do
 			cp ${LOCAL_LIB}-$$/${LOCAL_LIB}/*.[ch] ${LOCAL_LIB};
 			cp ${LOCAL_LIB}-$$/${LOCAL_LIB}/Makefile.am ${LOCAL_LIB}/Makefile.am;
 
-SED_SCRIPT="
-1i if HAVE_LOCAL_${LOCAL_LIB_UPPER}
+SED_SCRIPT="1i\\
+if HAVE_LOCAL_${LOCAL_LIB_UPPER}
 
 /lib_LTLIBRARIES/ {
 	s/lib_LTLIBRARIES/noinst_LTLIBRARIES/
@@ -41,7 +41,8 @@ SED_SCRIPT="
 :loop1
 	/${LOCAL_LIB}_la_LDFLAGS/ {
 		N
-		i endif
+		i\\
+endif
 		d
 	}
 	/${LOCAL_LIB}_la_LDFLAGS/ !{
@@ -52,7 +53,8 @@ SED_SCRIPT="
 
 /${LOCAL_LIB}_la_LDFLAGS/ {
 	N
-	i endif
+	i\\
+endif
 	d
 }
 
@@ -69,24 +71,34 @@ SED_SCRIPT="
 	N
 	d
 }";
-			sed "${SED_SCRIPT}" -i ${LOCAL_LIB}/Makefile.am;
+			echo "${SED_SCRIPT}" >> ${LOCAL_LIB}-$$.sed;
+			sed -i'~' -f ${LOCAL_LIB}-$$.sed ${LOCAL_LIB}/Makefile.am;
+			rm -f ${LOCAL_LIB}-$$.sed;
 
-SED_SCRIPT="
-/^$/ {
+SED_SCRIPT="/^$/ {
 	x
 	N
 	/endif$/ {
-		a \
+		a\\
 
 		D
 	}
 }";
-			sed "${SED_SCRIPT}" -i ${LOCAL_LIB}/Makefile.am;
+			echo "${SED_SCRIPT}" >> ${LOCAL_LIB}-$$.sed;
+			sed -i'~' -f ${LOCAL_LIB}-$$.sed ${LOCAL_LIB}/Makefile.am;
+			rm -f ${LOCAL_LIB}-$$.sed;
+
+			if [ ${LOCAL_LIB} = "libfvalue" ];
+			then
+				sed -i'~' '/@LIBFDATETIME_CPPFLAGS@/d' ${LOCAL_LIB}/Makefile.am;
+				sed -i'~' '/@LIBFGUID_CPPFLAGS@/d' ${LOCAL_LIB}/Makefile.am;
+				sed -i'~' '/@LIBFWNT_CPPFLAGS@/d' ${LOCAL_LIB}/Makefile.am;
+			fi
 
 			rm -f ${LOCAL_LIB}/${LOCAL_LIB}.c;
 
 			cp ${LOCAL_LIB}-$$/${LOCAL_LIB}/${LOCAL_LIB}_definitions.h.in ${LOCAL_LIB}/${LOCAL_LIB}_definitions.h;
-			sed 's/@VERSION@/${LOCAL_LIB_VERSION}/' -i ${LOCAL_LIB}/${LOCAL_LIB}_definitions.h;
+			sed -i'~' 's/@VERSION@/${LOCAL_LIB_VERSION}/' ${LOCAL_LIB}/${LOCAL_LIB}_definitions.h;
 		fi
 		rm -rf ${LOCAL_LIB}-$$;
 	fi
